@startuml CD05_NhomDonHang
!theme plain
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial

skinparam class {
    BackgroundColor #FEF5E7
    BorderColor #E67E22
    FontColor #1A252F
    FontSize 12
    HeaderBackgroundColor #784212
    HeaderFontColor #FFFFFF
    HeaderFontSize 13
    HeaderFontStyle bold
}
skinparam arrow {
    Color #2C3E50
    FontColor #5D6D7E
    FontSize 11
}

title <size:17><b>CD05 - Nhóm Đơn Hàng & Giỏ Hàng</b></size>\n<color:#5D6D7E><size:12>Order, OrderItem, CartItem, ProductVariant | CellphoneK</size></color>

class Order {
    +id : STRING <<PK - Timestamp>>
    +status : STRING = 'NEW'
    +paymentMethod : STRING = 'COD'
    +address : STRING
    +phone : STRING
    +note : TEXT
    +subTotal : DOUBLE
    +discountAmount : DOUBLE = 0
    +totalAmount : DOUBLE
    +usedCoupon : STRING
    +usedPoints : INTEGER = 0
    +cancelRequested : BOOLEAN = false
    +confirmedAt : DATE
    +cancelledAt : DATE
    +userId : INTEGER <<FK>>
    +createdAt : DATE
}

class OrderItem {
    +id : INTEGER <<PK>>
    +name : STRING
    +image : TEXT
    +unitPrice : DOUBLE
    +quantity : INTEGER
    +lineTotal : DOUBLE
    +isRated : BOOLEAN = false
    +variantInfo : STRING
    +orderId : STRING <<FK>>
    +productId : INTEGER <<FK>>
    +variantId : INTEGER <<FK, nullable>>
}

class CartItem {
    +id : INTEGER <<PK>>
    +quantity : INTEGER = 1
    +userId : INTEGER <<FK>>
    +productId : INTEGER <<FK>>
    +variantId : INTEGER <<FK, nullable>>
}

class Product {
    +id : INTEGER <<PK>>
    +name : STRING
    +price : DOUBLE
    +soldQuantity : INTEGER = 0
    .. See CD04 for full definition ..
}

class ProductVariant {
    +id : INTEGER <<PK>>
    +ram : STRING
    +rom : STRING
    +color : STRING
    +price : DOUBLE
    +stock : INTEGER = 20
    +productId : INTEGER <<FK>>
}

class User {
    +id : INTEGER <<PK>>
    +username : STRING
    +points : INTEGER
    .. See CD03 for full definition ..
}

class OrderController {
    <<Controller>>
    +checkoutCod(req, res) : void
    +getUserOrders(req, res) : void
    +getOrderById(req, res) : void
    +cancelOrder(req, res) : void
    +getOrderStatistics(req, res) : void
}

class CartController {
    <<Controller>>
    +getCart(req, res) : void
    +addToCart(req, res) : void
    +updateCart(req, res) : void
    +removeFromCart(req, res) : void
    +clearCart(req, res) : void
}

class AdminController {
    <<Controller>>
    +getAllOrders(req, res) : void
    +updateOrderStatus(req, res) : void
}

enum OrderStatus {
    NEW
    CONFIRMED
    PREPARING
    SHIPPING
    DELIVERED
    CANCELLED
}

User "1" --o{ "0..*" Order : places >
Order "1" *--o{ "1..*" OrderItem : contains >
Product "1" --o{ "0..*" OrderItem : included in >
ProductVariant "0..1" --o{ "0..*" OrderItem : specifies >

User "1" --o{ "0..*" CartItem : has in cart >
Product "1" --o{ "0..*" CartItem : in cart >
ProductVariant "0..1" --o{ "0..*" CartItem : specifies >

Order ..> OrderStatus : uses >

OrderController ..> Order : <<uses>>
OrderController ..> OrderItem : <<uses>>
OrderController ..> CartItem : <<uses>>
CartController ..> CartItem : <<uses>>
CartController ..> Product : <<uses>>
CartController ..> ProductVariant : <<uses>>
AdminController ..> Order : <<uses>>
AdminController ..> OrderItem : <<uses>>

note right of Order
  status flow:
  NEW → CONFIRMED → PREPARING
       → SHIPPING → DELIVERED
  Any state → CANCELLED
  
  id = Date.now().toString()
  (dùng timestamp làm mã đơn)
end note

note right of OrderItem
  isRated = false: chưa đánh giá
  isRated = true: đã đánh giá SP
  variantInfo: lưu dạng chuỗi
  VD: "8GB / 256GB / Đen"
  để hiển thị lịch sử đơn hàng
end note

note right of CartItem
  variantId nullable:
  = null → mua theo giá gốc SP
  ≠ null → mua theo giá biến thể
end note

@enduml
